--- a/src/SharpConnector.Test/SharpConnector.Test.csproj
+++ b/src/SharpConnector.Test/SharpConnector.Test.csproj
@@ -16,6 +16,12 @@
     <Authors>Francesco Del Re</Authors>
 
     <PackageProjectUrl>https://github.com/engineering87/SharpConnector</PackageProjectUrl>
+
+    <Version>1.0.1</Version>
+
+    <AssemblyVersion>1.0.1.0</AssemblyVersion>
+
+    <FileVersion>1.0.1.1</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
