--- a/src/SharpConnector.Test/SharpConnector.Test.csproj
+++ b/src/SharpConnector.Test/SharpConnector.Test.csproj
@@ -17,11 +17,11 @@
 
     <PackageProjectUrl>https://github.com/engineering87/SharpConnector</PackageProjectUrl>
 
-    <Version>1.0.1</Version>
+    <Version>1.0.2</Version>
 
-    <AssemblyVersion>1.0.1.0</AssemblyVersion>
+    <AssemblyVersion>1.0.2.0</AssemblyVersion>
 
-    <FileVersion>1.0.1.1</FileVersion>
+    <FileVersion>1.0.2.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
@@ -39,6 +39,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="appsettings.ravendb.json">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="appsettings.memcached.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
