--- a/src/SharpConnector.Test/SharpConnector.Test.csproj
+++ b/src/SharpConnector.Test/SharpConnector.Test.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
 
     <IsPackable>false</IsPackable>
 
@@ -17,11 +17,11 @@
 
     <PackageProjectUrl>https://github.com/engineering87/SharpConnector</PackageProjectUrl>
 
-    <Version>1.0.3</Version>
+    <Version>2.0.0</Version>
 
-    <AssemblyVersion>1.0.3.0</AssemblyVersion>
+    <AssemblyVersion>2.0.0.0</AssemblyVersion>
 
-    <FileVersion>1.0.3.0</FileVersion>
+    <FileVersion>2.0.0.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
