--- a/src/SharpConnector.Api/appsettings.json
+++ b/src/SharpConnector.Api/appsettings.json
@@ -1,8 +1,8 @@
 {
   "ConnectorConfig": {
-    "Instance": "Redis",
-    "DatabaseNumber": 0,
-    "ConnectionString": "redis_connectionstring_here"
+    "Instance": "RavenDb",
+    "DatabaseName": "test",
+    "ConnectionString": "http://live-test.ravendb.net"
   },
   "Logging": {
     "LogLevel": {
