--- a/src/SharpConnector.Api/appsettings.couchbase.json
+++ b/src/SharpConnector.Api/appsettings.couchbase.json
@@ -2,7 +2,7 @@
   "ConnectorConfig": {
     "Instance": "Couchbase",
     "ConnectionString": "couchbase://localhost",
-    "Username": "username",
+    "Username": "Administrator",
     "Password": "password",
     "BucketName": "example_bucket",
     "Options": {
@@ -13,12 +13,4 @@
       "SearchTimeout": 5000,
       "ManagementTimeout": 10000
     }
-  },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
-}
+  }
