--- a/.github/workflows/commit-lint.yml
+++ b/.github/workflows/commit-lint.yml
@@ -5,6 +5,7 @@ on:
   pull_request:
     branches:
       - '*'  # Runs on any pull request targeting any branch
+
 name: Lint commits
 jobs:
   lint-commits:
@@ -14,10 +15,12 @@ jobs:
         with:
           fetch-depth: 0
       - name: Fixup git permissions
-        # https://github.com/actions/checkout/issues/766
         shell: bash
         run: git config --global --add safe.directory "$GITHUB_WORKSPACE"
       - uses: actions/setup-node@v4.1.0
-      - run: npm install conventional-changelog
-      - run: npm install @commitlint/cli
-      - run: npx commitlint --from HEAD~${{ github.event.pull_request.commits }} --to HEAD
+        with:
+          node-version: 20
+      - name: Install commitlint dependencies
+        run: npm install --save-dev @commitlint/cli @commitlint/config-conventional
+      - name: Check commit messages
+        run: npx commitlint --from HEAD~${{ github.event.pull_request.commits || 1 }} --to HEAD
